--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Series Maniac-TV Series Website</title>
-  <link rel="stylesheet" type="text/css" href="CSSfiles/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h721jh/hX9X/xT1EpIy2gIBwVY87uugxJpz+" crossorigin="anonymous">
 
   
