--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
         <a href="index.html">Home</a>
-        <a href="/HTMLfiles/Comedy.html">Comedy</a>
-        <a href="/HTMLfiles/Drama.html">Drama</a>
-        <a href="/HTMLfiles/Kids.html">Kids</a>
-        <a href ="/HTMLfiles/Family.html">Family </a>
-        <a href="/HTMLfiles/Documentaries.html">Documentaries</a>
+        <a href="Comedy.html">Comedy</a>
+        <a href="Drama.html">Drama</a>
+        <a href="Kids.html">Kids</a>
+        <a href ="Family.html">Family </a>
+        <a href="Documentaries.html">Documentaries</a>
       </div>
     </div>
     
