--- a/Comedy.html
+++ b/Comedy.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Series Maniac-TV Series Website</title>
-  <link rel="stylesheet" type="text/css" href="/CSSfiles/Comedy.css">
+  <link rel="stylesheet" type="text/css" href="Comedy.css">
 </head>
 
 
@@ -16,12 +16,12 @@
     <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
-        <a href="/index.html">Home</a>
-        <a href="/HTMLfiles/Comedy.html">Comedy</a>
-        <a href="/HTMLfiles/Drama.html">Drama</a>
-        <a href="/HTMLfiles/Kids.html">Kids</a>
-        <a href="/HTMLfiles/Family.html">Family</a>
-        <a href="/HTMLfiles/Documentaries.html">Documentaries</a>
+        <a href="index.html">Home</a>
+        <a href="Comedy.html">Comedy</a>
+        <a href="Drama.html">Drama</a>
+        <a href="Kids.html">Kids</a>
+        <a href="Family.html">Family</a>
+        <a href="Documentaries.html">Documentaries</a>
       </div>
     </div>
       <div class="container mt-4">
@@ -33,16 +33,16 @@
 		</div>
   </div>
   </form>
-    <a href="/HTMLfiles/registerPage.html" style="color: white"<p>Login/Register</p></a>  
+    <a href="registerPage.html" style="color: white"<p>Login/Register</p></a>  
     </nav>
   
   <body>  
     <div id="search-results" class="mt-4"></div>
-    <script src="/JSfiles/Comedy.js"></script>
+    <script src="Comedy.js"></script>
    
     <h2>Comedy</h2>
   <div id="shows" class="card-container"></div>
-  <script src="/JSfiles/ComedyApi.js"></script>
+  <script src="ComedyApi.js"></script>
     
   </body>
   
