--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
   </div>
   </form>
     <div> 
-    <a href="/HTMLfiles/registerPage.html" style="color: white"<p>Login/Register</p></a>
+    <a href="registerPage.html" style="color: white"<p>Login/Register</p></a>
     </div>  
   </nav>
 </head>
 
 <body>
   <div id="search-results" class="mt-4"></div>
-  <script src="JSfiles/script.js"></script>
+  <script src="script.js"></script>
 
   <h2>Recommendations</h2>
   <div id="show-cards" class="card-group"></div>
-  <script src="JSfiles/RecommendApi.js"></script>
+  <script src="RecommendApi.js"></script>
 
 <footer>
  <!-- <h6><center>Copyright © 2023 Series Maniac, Inc.</center></h6
