--- a/Documentaries.html
+++ b/Documentaries.html
@@ -15,12 +15,12 @@
  <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
-        <a href="/index.html">Home</a>
-        <a href="/HTMLfiles/Comedy.html">Comedy</a>
-        <a href="/HTMLfiles/Drama.html">Drama</a>
-        <a href="/HTMLfiles/Kids.html">Kids</a>
-        <a href="/HTMLfiles/Family.html">Family</a>
-        <a href="/HTMLfiles/Documentaries.html">Documentaries</a>
+        <a href="index.html">Home</a>
+        <a href="Comedy.html">Comedy</a>
+        <a href="Drama.html">Drama</a>
+        <a href="Kids.html">Kids</a>
+        <a href="Family.html">Family</a>
+        <a href="Documentaries.html">Documentaries</a>
       </div>
     </div>
   <div class="container mt-4">
@@ -34,17 +34,17 @@
     </form>
    
   <div>
-    <a href="/HTMLfiles/registerPage.html" style="color: white"><p>Login/Register</p></a>
+    <a href="registerPage.html" style="color: white"><p>Login/Register</p></a>
   </div>
 </nav>
 
 <body>
   <div id="search-results" class="mt-4"></div>
-  <script src="/JSfiles/Documentaries.js"></script> 
+  <script src="Documentaries.js"></script> 
 
   <h3>Documentaries</h3>
   <div id="shows" class="shows-container"></div>
-  <script src="/JSfiles/Documentryapi.js"></script>
+  <script src="Documentryapi.js"></script>
 </body>
 
 <footer>
