--- a/Documentaries.html
+++ b/Documentaries.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Series Maniac-TV Series Website</title>
-  <link rel="stylesheet" type="text/css" href="/CSSfiles/Documentaries.css">
+  <link rel="stylesheet" type="text/css" href="Documentaries.css">
 </head>
 
 <header>
