--- a/Drama.html
+++ b/Drama.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Series Maniac-TV Series Website</title>
-  <link rel="stylesheet" type="text/css" href="/CSSfiles/Drama.css">
+  <link rel="stylesheet" type="text/css" href="Drama.css">
 </head>
 
 
@@ -16,12 +16,12 @@
   <div class="dropdown">
     <button class="dropbtn">Menu</button>
     <div class="dropdown-content">
-      <a href="/index.html">Home</a>
-      <a href="/HTMLfiles/Comedy.html">Comedy</a>
-      <a href="/HTMLfiles/Drama.html">Drama</a>
-      <a href="/HTMLfiles/Kids.html">Kids</a>
-      <a href="/HTMLfiles/Family.html">Family</a>
-      <a href="/HTMLfiles/Documentaries.html">Documentaries</a>
+      <a href="index.html">Home</a>
+      <a href="Comedy.html">Comedy</a>
+      <a href="Drama.html">Drama</a>
+      <a href="Kids.html">Kids</a>
+      <a href="Family.html">Family</a>
+      <a href="Documentaries.html">Documentaries</a>
     </div>
   </div>
   <div class="container mt-4">
@@ -35,17 +35,17 @@
        </div>
       </form>
   <div>
-    <a href="/HTMLfiles/registerPage.html" style="color: white" <p>Login/Register</p></a>
+    <a href="registerPage.html" style="color: white" <p>Login/Register</p></a>
   </div>
 </nav>
 
 <body>
   <div id="search-results" class="mt-4"></div>
-  <script src="/JSfiles/Drama.js"></script>
+  <script src="Drama.js"></script>
   
   <h3>Drama</h3>
   <div id="shows" class="card-container"></div>
-  <script src="/JSfiles/DramaApi.js"></script>
+  <script src="DramaApi.js"></script>
 
 </body>
 
