--- a/Family.html
+++ b/Family.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Series Maniac-TV Series Website</title>
-  <link rel="stylesheet" type="text/css" href="/CSSfiles/Family.css">
+  <link rel="stylesheet" type="text/css" href="Family.css">
 </head>
 
 
@@ -16,12 +16,12 @@
   <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
-        <a href="/index.html">Home</a>
-        <a href="/HTMLfiles/Comedy.html">Comedy</a>
-        <a href="/HTMLfiles/Drama.html">Drama</a>
-        <a href="/HTMLfiles/Kids.html">Kids</a>
-        <a href="/HTMLfiles/Family.html">Family</a>
-        <a href="/HTMLfiles/Documentaries.html">Documentaries</a>
+        <a href="index.html">Home</a>
+        <a href="Comedy.html">Comedy</a>
+        <a href="Drama.html">Drama</a>
+        <a href="Kids.html">Kids</a>
+        <a href="Family.html">Family</a>
+        <a href="Documentaries.html">Documentaries</a>
       </div>
     </div>
   <div class="container mt-4">
@@ -34,17 +34,17 @@
    </div>
   </form>
   <div>
-    <a href="/HTMLfiles/registerPage.html" style="color: white" <p>Login/Register</p></a>
+    <a href="registerPage.html" style="color: white" <p>Login/Register</p></a>
   </div>
 </nav>
 
 <body>
   <div id="search-results" class="mt-4"></div>
-  <script src="/JSfiles/Family.js"></script> 
+  <script src="Family.js"></script> 
   
   <h2>Family</h2>
   <div id="tv-shows"></div>
-  <script src="/JSfiles/FamilyApi.js"></script>
+  <script src="FamilyApi.js"></script>
   
 </body>
 <footer>
