--- a/loginPage.html
+++ b/loginPage.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="/CSSfiles/Login.css">
+  <link rel="stylesheet" type="text/css" href="Login.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         </label>
         <br>
         <button>
-          <a href="/index.html" style= "color: black"<p><b>Login</b></p></a>
+          <a href="index.html" style= "color: black"<p><b>Login</b></p></a>
         </button>
         </a>
       </form>
@@ -41,7 +41,7 @@
 
 
 
-  <script src="/JSfiles/PasswordRecovery.js"></script>
+  <script src="PasswordRecovery.js"></script>
      
     <button onclick="forgetPassword()">Forget Password</button> 
     <button onclick="resetPassword()">Reset Password</button> 
