--- a/registerPage.html
+++ b/registerPage.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="/CSSfiles/register.css">
+  <link rel="stylesheet" type="text/css" href="register.css">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
       </form>
       <br>
 <button>
-        <a href = "/index.html" style= "color: black"<p><b>Submit</b></p></a>
+        <a href = "index.html" style= "color: black"<p><b>Submit</b></p></a>
       </button>
     </div>
     <br>
@@ -55,7 +55,7 @@
         <p1>Already have an Account?</p1>
         <br>
         <button>
-          <a href="/HTMLfiles/loginPage.html" style= "color: black" <p><b>Login</b></p></a>
+          <a href="loginPage.html" style= "color: black" <p><b>Login</b></p></a>
         </button>
         <br>
       </div>
@@ -63,7 +63,7 @@
 
   </main>
   <script src= "https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"> </script>
-  <script src= "/JSfiles/mail.js"> </script>
+  <script src= "mail.js"> </script>
 
   
 </body>
