--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Series Maniac-TV Series Website</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" href="https://colorhunt.co/palette/3f3b6c624f829f73aba3c7d6" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h721jh/hX9X/xT1EpIy2gIBwVY87uugxJpz+" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://colorhunt.co/palette/3f3b6c624f829f73aba3c7d6">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h721jh/hX9X/xT1EpIy2gIBwVY87uugxJpz+" crossorigin="anonymous">
 
   
   <header>
